feat(app): significant v2 refactoring work

--- a/src/admin/adhoc-scripts.html
+++ b/src/admin/adhoc-scripts.html
@@ -20,7 +20,7 @@
                     <i class="far fa-large fa-trash-alt" ></i>
                 </button>
                     <i class="fa fa-search"> </i>
-                    <input type="text" value.bind="like" class="fa fa-search" style="height:2.3em;border-radius:0.5em;" change.delegate="prev_code(code)"></input>
+                    <input type="text" value.bind="like" class="fa fa-search" style="height:2.3em;border-radius:0.5em;" change.trigger="prev_code(code)"></input>
                 </div>
             </div>
         </div>
