--- a/src/admin/merge-help-messages.html
+++ b/src/admin/merge-help-messages.html
@@ -32,7 +32,7 @@
 
         </div> -->
     </div>
-    <edit-side-by-side if.bind="curr_story_id" fixed_str.bind="left_text" edited_str.bind="right_text" height.bind="520" init.bind="init" dirty.bind="dirty" save.delegate="saved()">
+    <edit-side-by-side if.bind="curr_story_id" fixed_str.bind="left_text" edited_str.bind="right_text" height.bind="520" init.bind="init" dirty.bind="dirty" save.trigger="saved()">
 
     </edit-side-by-side>
 </div>
