--- a/src/resources/elements/fit-text.html
+++ b/src/resources/elements/fit-text.html
@@ -1,5 +1,5 @@
 <div css="width:${width}px;height:${height}px;">
-    <canvas ref="canvas" resize.delegate="fit()" show.bind="!truncated_text">
+    <canvas ref="canvas" resize.trigger="fit()" show.bind="!truncated_text">
         ${dummy}
     </canvas>
     <p innerhtml.bind="truncated_text">
