--- a/src/user/chat.html
+++ b/src/user/chat.html
@@ -1,3 +1,1 @@
-<template>
-    <chatroom room_number.bind="chatroom_id" deleted.delegate="room_deleted()"></chatroom>
-</template>
+<chatroom room_number.bind="chatroom_id" deleted.trigger="room_deleted()"></chatroom>
