--- a/src/admin/customize.html
+++ b/src/admin/customize.html
@@ -92,7 +92,7 @@
                     options.bind="key_value_list"
                     settings.bind="options_settings"
                     category="locale"
-                    name-changed.delegate="dic_item_changed($event)"
+                    name-changed.trigger="dic_item_changed($event)"
                     place_holder_text="user.enter-text-to-replace"
                 >
                 </multi-select>
@@ -286,7 +286,7 @@
                             width: 200px;
                         "
                         value.bind="promoted_story_expiration"
-                        change.delegate="set_promoted_story_expiration()"
+                        change.trigger="set_promoted_story_expiration()"
                     />
                 </div>
                 <div style="margin-bottom: 5px; display: flex">
