--- a/src/gallery/gallery.html
+++ b/src/gallery/gallery.html
@@ -1,11 +1,8 @@
-<template>
-    <section class="container content-area">
-        <div class="app-list">
-            <div repeat.for="app of app_list">
-                <compose view-model="./app-link" model.bind="app" if.bind="user.editing || app.active">
-                </compose>
-            </div>
+<section class="container content-area">
+    <div class="app-list">
+        <div repeat.for="app of app_list">
+            <compose view-model="./app-link" model.bind="app" if.bind="user.editing || app.active">
+            </compose>
         </div>
-    </section>s
-
-</template>
+    </div>
+</section>
