--- a/src/groups/upload-photo.html
+++ b/src/groups/upload-photo.html
@@ -13,7 +13,7 @@
     </div>
     <div class="photo-area" id="group-photo-area">
         <div class="buttons" if.bind="phase != 'photo-uploaded' && ! status_record.map_visible">
-            <form submit.delegate="save()">
+            <form submit.trigger="save()">
                 <div class="form-group" if.bind="phase=='ready-to-select'">
                     <label class="control-label ${status_record.user_id <= 0 ? 'disabled' : ''}" for="photos">
                         <i class="far fa-browser fa-sm">&nbsp;&nbsp;</i>${'groups.select-photo' & t}
@@ -38,7 +38,7 @@
         <div show.bind="status_record.map_visible">
             <google-map longitude.two-way="status_record.photo_info.longitude"
                 latitude.two-way="status_record.photo_info.latitude" zoom.bind="status_record.photo_info.zoom"
-                map-click.trigger="create_marker($event)" bounds-change.delegate="bounds_changed($event)"
+                map-click.trigger="create_marker($event)" bounds-change.trigger="bounds_changed($event)"
                 markers.bind="markers" auto-update-bounds="true" style="height:720px;">
             </google-map>
         </div>
