--- a/src/members/member-edit.html
+++ b/src/members/member-edit.html
@@ -102,12 +102,12 @@
             <div class="form-group ${member.member_info.first_name ? '' : 'mandatory-missing'}">
                 <input type="text" class="form-control" id="first_name" t="[placeholder]members.first-name" 
                 value.bind="member.member_info.first_name" 
-                change.delegate="trim_first_name()">
+                change.trigger="trim_first_name()">
             </div>
             <div class="form-group">
                 <input type="text" class="form-control" id="last_name" t="[placeholder]members.last-name" 
                 value.bind="member.member_info.last_name"
-                change.delegate="trim_last_name()">
+                change.trigger="trim_last_name()">
             </div>
             <div class="form-group">
                 <input type="text" class="form-control" id="birth_place" t="[placeholder]members.birth-place" value.bind="member.member_info.PlaceOfBirth">
