--- a/src/my-app.html
+++ b/src/my-app.html
@@ -8,7 +8,7 @@
         <nav class="navbar navbar-default navbar-fixed-top unselectable" role="navigation" if.bind="! theme.hide_menu">
             <div class="navbar-main" style="position: relative;">
                 <div class="nav-items unselectable" id="nav-items" interact-draggable.bind="theme.interact_setting"
-                    interact-dragmove.delegate="drag_menu_items($event)">
+                    interact-dragmove.trigger="drag_menu_items($event)">
                     <a class="navbar-logo" href="#">
                         <img if.bind="theme.files.app_logo" src="${theme.files.app_logo}" />
                         <span class="router-title">${router.title & t}</span>
@@ -34,7 +34,7 @@
                     <label class="search-box-container">
                         <input type="text" list="search-history" 
                             class="search-box-input" value.bind="keywords"
-                            t="[placeholder]enter-search-words" keydown.delegate="go_search($event)" />
+                            t="[placeholder]enter-search-words" keydown.trigger="go_search($event)" />
                             <datalist id="search-history">
                                 <option repeat.for="option of search_history" value.bind="option"></option>
                             </datalist>
