--- a/src/photos/full-size-photo.html
+++ b/src/photos/full-size-photo.html
@@ -1,15 +1,15 @@
 <div id="full-size-photo" class="slide unselectable" click.trigger="mark_face($event)" style="margin-left:0;"
-    fullscreenchange.delegate="fullscreen_change($event)" interact-draggable.bind="theme.interact_setting"
-    interact-dragmove.delegate="drag_move_photo($event)">
+    fullscreenchange.trigger="fullscreen_change($event)" interact-draggable.bind="theme.interact_setting"
+    interact-dragmove.trigger="drag_move_photo($event)">
     <div style="display:flex;flex-direction:row-reverse;">
         <div class="slide full-size-photo"
             css="height: ${slide[slide.side].height}px; width:${Math.max(slide[slide.side].width + 32,640)}px;position:relative;">
-            <div id="photo-image" keydown.delegate="keypress($event)">
+            <div id="photo-image" keydown.trigger="keypress($event)">
                 <div show.bind="cropping" 
                 id="cropper"
                     css="height:${crop_height}px;width:${crop_width}px;position:absolute;top:${crop_top}px;left:${crop_left}px;opacity:0.5;background-color:grey;border-width:3px;border-style:dotted;border-color: yellow;"
-                    interact-draggable.bind="theme.interact_setting" interact-dragmove.delegate="do_crop($event)"
-                    interact-dragstart.delegate="start_crop($event)">
+                    interact-draggable.bind="theme.interact_setting" interact-dragmove.trigger="do_crop($event)"
+                    interact-dragstart.trigger="start_crop($event)">
                 </div>
                 <!-- <div class="fullscreen-navigator prev" if.bind="fullscreen_mode && can_go_backward"> -->
                 <span if.bind="fullscreen_mode && can_go_backward" class="prev" click.trigger="prev_slide($event)">
@@ -41,10 +41,10 @@
             </button>
             <button dir="rtl" repeat.for="face of faces" click.trigger="handle_face(face, $event, $index)"
                 interact-draggable.bind="theme.interact_setting"
-                contextmenu.delegate="handle_context_menu(face, $event)" class="face"
-                id.bind="'face-' + face.member_id" interact-dragmove.delegate="dragmove(face, $event)"
-                interact-dragstart.delegate="dragstart(face, $event, 'face-')"
-                interact-dragend.delegate="dragend(face, $event)" style.bind="face_location(face)"
+                contextmenu.trigger="handle_context_menu(face, $event)" class="face"
+                id.bind="'face-' + face.member_id" interact-dragmove.trigger="dragmove(face, $event)"
+                interact-dragstart.trigger="dragstart(face, $event, 'face-')"
+                interact-dragend.trigger="dragend(face, $event)" style.bind="face_location(face)"
                 aubs-tooltip="text.bind:face.name">
                 <span style="position:relative">
                     <span class="highlighted-face" if.bind="highlighting" innerhtml.bind="face.name"
@@ -55,10 +55,10 @@
             <button dir="rtl" repeat.for="face of articles"
                 click.trigger="handle_article(face, $event, $index)"
                 interact-draggable.bind="theme.interact_setting"
-                contextmenu.delegate="handle_context_menu(face, $event)" class="face is-article"
-                id.bind="'article-' + face.article_id" interact-dragmove.delegate="dragmove(face, $event)"
-                interact-dragstart.delegate="dragstart(face, $event, 'article-')"
-                interact-dragend.delegate="dragend(face, $event)" style.bind="face_location(face)"
+                contextmenu.trigger="handle_context_menu(face, $event)" class="face is-article"
+                id.bind="'article-' + face.article_id" interact-dragmove.trigger="dragmove(face, $event)"
+                interact-dragstart.trigger="dragstart(face, $event, 'article-')"
+                interact-dragend.trigger="dragend(face, $event)" style.bind="face_location(face)"
                 aubs-tooltip="text.bind:face.name">
                 <span style="position:relative">
                     <span class="highlighted-face" if.bind="highlighting" innerhtml.bind="face.name"
@@ -166,7 +166,7 @@
             </span>
             <date-range label="photos.photo-date" 
                 range_options.bind="[1,2,3,5,10, 20, 50, 100, 120]"
-                change.delegate="save_photo_info($event)" 
+                change.trigger="save_photo_info($event)" 
                 base_date_str.bind="photo_info.photo_date_str"
                 is_valid.bind="photo_date_valid" 
                 hide_label_if_no_date.bind="true"
