--- a/src/photos/photo-detail.html
+++ b/src/photos/photo-detail.html
@@ -2,7 +2,7 @@
     <div class="detail-header">
         <div style="cursor:pointer;padding:0;margin:0;" if.bind="theme.is_desktop">
             <chat-button chatroom_id.two-way="chatroom_id" caption.bind="'photos.add-details'"
-                new-chatroom.delegate="create_chatroom()" chatroom-deleted.delegate="chatroom_deleted($event)">
+                new-chatroom.trigger="create_chatroom()" chatroom-deleted.trigger="chatroom_deleted($event)">
             </chat-button>
             <i class="far fa-lg fa-arrow-up fa-rotate-${theme.rtltr=='rtl' ? 90 : 270} ${next_class}" t="[title]photos.next-slide"
                 click.trigger="go_next($event)" if.bind="photo_ids.length > 1"></i>
@@ -36,7 +36,7 @@
                     base_date_str.bind="photo_date_str" hide_label_if_no_date.bind="true" enable_days_range.bind="true"
                     span_size.bind="photo_date_datespan" range_options.bind="[1,2,3,5,10,15,20,25,30,50,100,120]"
                     is_valid.bind="photo_date_valid"
-                    change.delegate="update_photo_date($event)">
+                    change.trigger="update_photo_date($event)">
                 </date-range>
                 <span if.bind="topic_names" style="margin-top: 12px;">${'photos.keywords' & t}: ${topic_names}</span>
             </div>
@@ -58,7 +58,7 @@
                             zoom.bind="zoom"
                             can_mark.bind="user.editing"
                             marked.bind="marked"
-                            location-changed.delegate="location_changed($event)"
+                            location-changed.trigger="location_changed($event)"
                     >
                     </my-map>
 
@@ -97,9 +97,9 @@
                                     <multi-select options.bind="topic_list" category="topic"
                                         selected_options.bind="params.selected_topics"
                                         first_time.bind="no_topics_yet" option_groups.bind="topic_groups"
-                                        new-name.delegate="add_topic($event)" settings.bind="options_settings"
+                                        new-name.trigger="add_topic($event)" settings.bind="options_settings"
                                         has_groups.bind="has_grouped_topics" place_holder_text="photos.click-topic"
-                                        ms-change.delegate="handle_topic_change($event) ">
+                                        ms-change.trigger="handle_topic_change($event) ">
                                     </multi-select>
                                 </div>
                                 <div class="multi-select-div" dir="${theme.rtltr}">
@@ -110,9 +110,9 @@
                                         selected_options.bind="params.selected_photographers"
                                         settings.bind="photographers_settings"
                                         first_time.bind="no_photographers_yet"
-                                        new-name.delegate="add_photographer($event)"
-                                        name-changed.delegate="photographer_name_changed($event)"
-                                        ms-change.delegate="handle_photographer_change($event)">
+                                        new-name.trigger="add_photographer($event)"
+                                        name-changed.trigger="photographer_name_changed($event)"
+                                        ms-change.trigger="handle_photographer_change($event)">
                                     </multi-select>
                                 </div>
                                 <div style="margin-top: 10px;margin-bottom:2px;font-size:120%">
