--- a/src/photos/qr-photo.html
+++ b/src/photos/qr-photo.html
@@ -7,12 +7,12 @@
         <form class="form-horizontal" role="form" id="new-app">
             <div class="form-group" style="margin-left:0;margin-right:0;">
                 <input type="number" class="form-control" id="inputFirstName3"
-                    t="[placeholder]photos.printed-photo-width" change.delegate="changed('width')"
+                    t="[placeholder]photos.printed-photo-width" change.trigger="changed('width')"
                     value.bind="data.width">
             </div>
             <div class="form-group" style="margin-left:0;margin-right:0;">
                 <input type="number" class="form-control" id="inputFirstName3"
-                    t="[placeholder]photos.printed-photo-height" change.delegate="changed('height')"
+                    t="[placeholder]photos.printed-photo-height" change.trigger="changed('height')"
                     value.bind="data.height">
             </div>
             <div class="form-group" style="margin-left:0;margin-right:0;">
