--- a/src/resources/elements/date-range.html
+++ b/src/resources/elements/date-range.html
@@ -14,7 +14,7 @@
 
     <div if.bind="show_edit_end_date" class="form-group" style="margin-right:0px;top:0;left:87px;float:left; ">
         <select value.bind="span_size" style="height:1.8em;color:black;width:90px;"
-            change.delegate="span_size_changed($event)">
+            change.trigger="span_size_changed($event)">
             <option repeat.for="option of end_date_options" model.bind="option.value">${option.name}</option>
         </select>
     </div>
