--- a/src/resources/elements/my-map/my-map.html
+++ b/src/resources/elements/my-map/my-map.html
@@ -1,6 +1,3 @@
-<require from="./my-map.scss">
-
-</require>
 <div id="mapa" style="margin-left:auto;margin-right:auto;width:500px;height:500px">
     <input
             id="pac-input"
@@ -14,7 +11,7 @@
             latitude.two-way="latitude"
             map-loaded.call="map_loaded(map, $event)"
             map-click.trigger="create_marker($event)"
-            bounds-change.delegate="bounds_changed($event)"
+            bounds-change.trigger="bounds_changed($event)"
             markers.bind="markers"
             zoom.bind="zoom"
             auto-update-bounds="true">
